Submission for DEMONSTRATON

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 ################################################################################
 
 /.vs
+/ON/ZhangTianyi/Module5/ConsoleApp1/.vs/ConsoleApp1/v16
