--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@
 
 /.vs
 /ON/ZhangTianyi/Module5/ConsoleApp1/.vs/ConsoleApp1/v16
+/ON/ZhangTianyi/Module5/ConsoleApp1/.vs/ConsoleApp1/DesignTimeBuild
+/ON/ZhangTianyi/Module6/ConsoleApp1/.vs/ConsoleApp1/v16
