--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 ################################################################################
 
 /ON/MichaelHeryford/Module 4/ActionDelegates/.vs/ActionDelegates
+/ON/MichaelHeryford/Module 4/MulticastingDelegates/.vs/MulticastingDelegates
+/ON/MichaelHeryford/Module 4/PredicateDelegates/.vs/PredicateDelegates/v16
