--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,7 @@
 /ON/ShanshanYu/Module2/HelloForm/.vs/HelloForm/v16
 /ON/ShanshanYu/Module2/HelloForm/bin/Debug
 /ON/ShanshanYu/Module2/HelloForm/obj/Debug
+/ON/ShanshanYu/Module3/Events
+/ON/ShanshanYu/Module4/ActionDelegate/.vs/ActionDelegate
+/ON/ShanshanYu/Module4/MulticastingDelegates/.vs/MulticastingDelegates
+/ON/ShanshanYu/Module4/PredicateDelegates/.vs/PredicateDelegates/v16
