--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@
 /ON/ShanshanYu/Module4/ActionDelegate/.vs/ActionDelegate
 /ON/ShanshanYu/Module4/MulticastingDelegates/.vs/MulticastingDelegates
 /ON/ShanshanYu/Module4/PredicateDelegates/.vs/PredicateDelegates/v16
+/ON/ShanshanYu/Module3/Delegates/obj/Release/netcoreapp3.1
