submission for section2 module 4

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@
 /ON/ZhangTianyi/Module5/ConsoleApp1/.vs/ConsoleApp1/v16
 /ON/ZhangTianyi/Module5/ConsoleApp1/.vs/ConsoleApp1/DesignTimeBuild
 /ON/ZhangTianyi/Module6/ConsoleApp1/.vs/ConsoleApp1/v16
+/ON/ZhangTianyi/Module 4/ConsoleApp1/.vs/ConsoleApp1
