--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@
 /ON/ZhangTianyi/Module5/ConsoleApp1/.vs/ConsoleApp1/DesignTimeBuild
 /ON/ZhangTianyi/Module6/ConsoleApp1/.vs/ConsoleApp1/v16
 /ON/ZhangTianyi/Module 4/ConsoleApp1/.vs/ConsoleApp1
+/ON/ZhangTianyi/Module 4/PredicateDelegates/.vs/PredicateDelegates/v16
