--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@
 
 /.vs
 /ON/SreelekhaSangitha/Module 4/PredicateDelegates/.vs/PredicateDelegates/v16
+/ON/SreelekhaSangitha/Module 5/Abstraction/.vs/Abstraction/v16
