--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@
 /ON/ZhangTianyi/Module6/ConsoleApp1/.vs/ConsoleApp1/v16
 /ON/ZhangTianyi/Module 4/ConsoleApp1/.vs/ConsoleApp1
 /ON/ZhangTianyi/Module 4/PredicateDelegates/.vs/PredicateDelegates/v16
+/ON/ZhangTianyi/Module5/Abstraction/.vs/Abstraction/v16
