--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@
 /ON/ZhangTianyi/Module 4/ConsoleApp1/.vs/ConsoleApp1
 /ON/ZhangTianyi/Module 4/PredicateDelegates/.vs/PredicateDelegates/v16
 /ON/ZhangTianyi/Module5/Abstraction/.vs/Abstraction/v16
+/ON/ZhangTianyi/Module5/Encapsulation/.vs/Encapsulation/v16
