submission for section 3 module 5

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@
 /ON/ZhangTianyi/Module 4/PredicateDelegates/.vs/PredicateDelegates/v16
 /ON/ZhangTianyi/Module5/Abstraction/.vs/Abstraction/v16
 /ON/ZhangTianyi/Module5/Encapsulation/.vs/Encapsulation/v16
+/ON/ZhangTianyi/Module5/Inheritance/.vs/Inheritance/v16
