submission for section 4 module 5

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@
 /ON/ZhangTianyi/Module5/Abstraction/.vs/Abstraction/v16
 /ON/ZhangTianyi/Module5/Encapsulation/.vs/Encapsulation/v16
 /ON/ZhangTianyi/Module5/Inheritance/.vs/Inheritance/v16
+/ON/ZhangTianyi/Module5/StaticPolymprphism/.vs/StaticPolymprphism/v16
