--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@
 /ON/ZhangTianyi/Module5/Encapsulation/.vs/Encapsulation/v16
 /ON/ZhangTianyi/Module5/Inheritance/.vs/Inheritance/v16
 /ON/ZhangTianyi/Module5/StaticPolymprphism/.vs/StaticPolymprphism/v16
+/ON/ZhangTianyi/Module5/DymanicPolymprphism/.vs/DymanicPolymprphism/v16
