Subission for Module 5

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,8 @@
 /.vs
 /ON/SreelekhaSangitha/Module 4/PredicateDelegates/.vs/PredicateDelegates/v16
 /ON/SreelekhaSangitha/Module 5/Abstraction/.vs/Abstraction/v16
+/ON/SreelekhaSangitha/Module 5/Abstraction/.vs/Abstraction/DesignTimeBuild
+/ON/SreelekhaSangitha/Module 5/DynamicPolymorphism/.vs/DynamicPolymorphism/v16
+/ON/SreelekhaSangitha/Module 5/Encapsulation/.vs/Encapsulation
+/ON/SreelekhaSangitha/Module 5/Inheritance/.vs/Inheritance
+/ON/SreelekhaSangitha/Module 5/StaticPolymorphism/.vs/StaticPolymorphism
