Submission for Module 6

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,8 @@
 /ON/SreelekhaSangitha/Module 5/Encapsulation/.vs/Encapsulation
 /ON/SreelekhaSangitha/Module 5/Inheritance/.vs/Inheritance
 /ON/SreelekhaSangitha/Module 5/StaticPolymorphism/.vs/StaticPolymorphism
+/ON/SreelekhaSangitha/Module 6/DivideByZero/.vs/DivideByZero
+/ON/SreelekhaSangitha/Module 6/ReadingFiles/.vs/ReadingFiles
+/ON/SreelekhaSangitha/Module 6/UserDefinedExceptions/.vs/UserDefinedExceptions
+/ON/SreelekhaSangitha/Module 6/WritingFiles/.vs/WritingFiles/v16
+/ON/SreelekhaSangitha/Module 5/DynamicPolymorphism/.vs/DynamicPolymorphism/DesignTimeBuild
