--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@
 /ON/ZhangTianyi/Module5/Inheritance/.vs/Inheritance/v16
 /ON/ZhangTianyi/Module5/StaticPolymprphism/.vs/StaticPolymprphism/v16
 /ON/ZhangTianyi/Module5/DymanicPolymprphism/.vs/DymanicPolymprphism/v16
+/ON/ZhangTianyi/Module6/DivideByZero/.vs/DivideByZero/v16
