submission 2 for module 6

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@
 /ON/ZhangTianyi/Module5/StaticPolymprphism/.vs/StaticPolymprphism/v16
 /ON/ZhangTianyi/Module5/DymanicPolymprphism/.vs/DymanicPolymprphism/v16
 /ON/ZhangTianyi/Module6/DivideByZero/.vs/DivideByZero/v16
+/ON/ZhangTianyi/Module6/UserDefinedExceptions/.vs/UserDefinedExceptions/v16
