--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@
 /ON/ZhangTianyi/Module5/DymanicPolymprphism/.vs/DymanicPolymprphism/v16
 /ON/ZhangTianyi/Module6/DivideByZero/.vs/DivideByZero/v16
 /ON/ZhangTianyi/Module6/UserDefinedExceptions/.vs/UserDefinedExceptions/v16
+/ON/ZhangTianyi/Module6/ReadingFiles/.vs/ReadingFiles/v16
