submission 4 for module6

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@
 /ON/ZhangTianyi/Module6/DivideByZero/.vs/DivideByZero/v16
 /ON/ZhangTianyi/Module6/UserDefinedExceptions/.vs/UserDefinedExceptions/v16
 /ON/ZhangTianyi/Module6/ReadingFiles/.vs/ReadingFiles/v16
+/ON/ZhangTianyi/Module6/WritingFiles/.vs/WritingFiles/v16
