--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@
 /ON/MichaelHeryford/Module 6/DivideByZero/.vs/DivideByZero/v16/.suo
 /ON/MichaelHeryford/Module 6/WritingFiles/.vs/WritingFiles/v16/.suo
 /ON/MichaelHeryford/Module 6/WritingFiles/.vs/WritingFiles/v16/Server/sqlite3/db.lock
+/ON/MichaelHeryford/Module 7/DBConnection/.vs/DBConnection/v16/Server/sqlite3/db.lock
