Submission for Module 7

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@
 /ON/SreelekhaSangitha/Module 6/UserDefinedExceptions/.vs/UserDefinedExceptions
 /ON/SreelekhaSangitha/Module 6/WritingFiles/.vs/WritingFiles/v16
 /ON/SreelekhaSangitha/Module 5/DynamicPolymorphism/.vs/DynamicPolymorphism/DesignTimeBuild
+/ON/SreelekhaSangitha/Module 7/DBConnection/.vs/DBConnection/v16
