--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@
 /ON/ShanshanYu/Module4/MulticastingDelegates/.vs/MulticastingDelegates
 /ON/ShanshanYu/Module4/PredicateDelegates/.vs/PredicateDelegates/v16
 /ON/ShanshanYu/Module3/Delegates/obj/Release/netcoreapp3.1
+/ON/ShanshanYu/Module6
