submission for module7

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,5 @@
 /ON/ZhangTianyi/Module6/UserDefinedExceptions/.vs/UserDefinedExceptions/v16
 /ON/ZhangTianyi/Module6/ReadingFiles/.vs/ReadingFiles/v16
 /ON/ZhangTianyi/Module6/WritingFiles/.vs/WritingFiles/v16
+/ON/ZhangTianyi/Module7/WindowsFormsApp1/.vs/WindowsFormsApp1/v16
+/ON/ZhangTianyi/Module7/DBCConnection/.vs/DBCConnection/v16
