--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@
 /ON/MichaelHeryford/Module 6/WritingFiles/.vs/WritingFiles/v16/.suo
 /ON/MichaelHeryford/Module 6/WritingFiles/.vs/WritingFiles/v16/Server/sqlite3/db.lock
 /ON/MichaelHeryford/Module 7/DBConnection/.vs/DBConnection/v16/Server/sqlite3/db.lock
+/ON/MichaelHeryford/Module 9/MyFirstWebApp/.vs/MyFirstWebApp/v16/Server/sqlite3/db.lock
